DEMO OSM/OCP4-istio/kustomize/application/1_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world
        deploymentconfig: hello-world
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: hello-world
          securityContext:
            {}
          image: "quay.io/rhdevelopers/knative-tutorial-greeter:quarkus"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            {}
