DEMO OSM/OCP4-istio/kustomize/application/2_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: hello-world
    deploymentconfig: hello-world
