DEMO OSM/OCP4-istio/kustomize/application/3_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: hello-world
    weight: 100
  wildcardPolicy: None
